--- a/main.css
+++ b/main.css
@@ -28,8 +28,8 @@ header a:hover{
     color: bisque;
 }
 
-body{
-    background-image: url(./img/background.jpg);
+.tudo{
+    background-image: url(./img/background2.png);
     min-width: 500px;
     display: flex;
 }
@@ -78,6 +78,13 @@ h2{
     display: flex;
     justify-content: center;
     text-decoration: underline overline rgb(139, 25, 25);
+    padding-top: 15px;
+    padding-bottom: 20px;
+}
+
+.Sobre{
+    padding-top: 10px;
+    padding-bottom: 1px;
 }
 
 
@@ -179,6 +186,15 @@ table{
     max-width: 700px;
 }
 .tabela{
+    display: flex;
+    justify-content: center;
+}
+
+/*footer*/
+
+footer{
+    background-color: rgb(67, 18, 18);
+    color: bisque;
     display: flex;
     justify-content: center;
 }
